<resources>
    <string name="semicolon_with_space">: </string>
    <string name="app_name">Fitness Buddy</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_info">This app should help you to train and keep your diet under control</string>
    <string name="lets_do_this_button">let\'s do this</string>
    <string name="profile_details">Enter profile details</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">next</string>
    <string name="gender">Gender</string>
    <string name="fitness_goal">Fitness goal</string>
    <string name="fat_loss">Fat loss</string>
    <string name="maintenance">Maintenance</string>
    <string name="muscle_gain">Muscle gain</string>
    <string name="activity_level">Weekly activity level</string>
    <string name="finish">finish</string>
    <string name="lightly_active">Lightly active</string>
    <string name="moderately_active">Moderately active</string>
    <string name="very_active">Very active</string>
    <string name="extra_active">Extra active</string>
    <string name="lightly_active_desc">Moderate exercise but sedentary job</string>
    <string name="moderately_active_desc">Intense exercise but sedentary job</string>
    <string name="very_active_desc">Moderate exercise and active job</string>
    <string name="extra_active_desc">Intense exercise and active job</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="choose_training_type">Choose your training</string>
    <string name="meal">meal</string>
    <string name="training">training</string>
    <string name="full_body">Full body</string>
    <string name="legs_back">Legs and back</string>
    <string name="chest">Chest and arms</string>
    <string name="change">Change</string>
    <string name="reset">reset</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="endTraining">End training</string>
    <string name="trainingsdone">Trainings done:</string>
    <string name="goal">Goal:</string>
    <string name="proteins">Proteins:</string>
    <string name="carbs">Carbs:</string>
    <string name="fats">Fats:</string>
    <string name="calories">Calories:</string>
    <string name="settings">Settings</string>

    <string-array name="trainings_list">
        <item>Full body</item>
        <item>Chest and arms</item>
        <item>Legs and back</item>
        <item>Shoulders and core</item>
    </string-array>

    <string-array name="full_body">
        <item>1. Bench Press</item>
        <item>2. Leg Press</item>
        <item>3. Leg Curl</item>
        <item>4. Lateral Raise</item>
        <item>5. Cable Row</item>
        <item>6. EZ Bar Curl</item>
        <item>7. Tricep Dips</item>
        <item>8. Crunches </item>
    </string-array>
    <string-array name="chest_and_arms">
        <item>1. chest</item>
        <item>2. chest</item>
        <item>3. chest</item>
        <item>4. chest</item>
        <item>5. chest</item>
        <item>6. chest</item>
    </string-array>
    <string-array name="legs_and_back">
        <item>1. legs</item>
        <item>2. legs</item>
        <item>3. legs</item>
        <item>4. legs</item>
        <item>5. legs</item>
        <item>6. legs</item>
    </string-array>
    <string-array name="shoulders_and_core">
        <item>1. shoulders</item>
        <item>2. shoulders</item>
        <item>3. shoulders</item>
        <item>4. shoulders</item>
        <item>5. shoulders</item>
        <item>6. shoulders</item>
    </string-array>
    <string name="reset_counter">Reset counter of done trainings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splash_screen">Get pumped!</string>
    <string name="first_snack">First snack</string>
    <string name="first_snack_description">Dried rice bread with ham and pickle</string>
    <string name="lunch_description">Bulgur with chicken breast and salad</string>
    <string name="dinner_description">Rice with fish and salad</string>
    <string name="second_snack">Second snack</string>
    <string name="second_snack_description">Quark with apple</string>
    <string name="breakfast_description">Oatmeal with milk, dried fruits and omelette</string>
    <string name="oatmeal">oatmeal</string>
    <string name="milk">milk</string>
    <string name="dried_fruits">dried fruits</string>
    <string name="eggs">eggs</string>
    <string name="dried_rice">dried rice bread</string>
    <string name="ham">low fat ham</string>
    <string name="pickle">fresh pickle</string>
    <string name="bulgur">bulgur</string>
    <string name="chicken_breast">chicken breast</string>
    <string name="salad">salad</string>
    <string name="rice">rice</string>
    <string name="fish">low fat fish</string>
    <string name="quark">quark</string>
    <string name="apple">apple</string>
    <string name="grams">gr</string>
    <string name="milliliters">ml</string>
    <string name="unlimited">unlimited</string>
    <string name="leg_press">1. Leg press</string>
    <string name="lat_pulldown">2. Lat pulldown</string>
    <string name="bench_press">3. Bench press</string>
    <string name="dumbbell_shoulder_press">4. Dumbbell shoulder press</string>
    <string name="dumbbell_bicep_curl">5. Dumbbell Bicep cur</string>
    <string name="triceps_pushdown">6. Triceps pushdown</string>
    <string name="deadlift">1. Deadlift</string>
    <string name="barbell_row">3. Barbell row</string>
    <string name="bicep_curl">4. Bicep curl</string>
    <string name="crunches">5. Crunches</string>
    <string name="bench_dips">Bench dips</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="Dumbbell_fly">Dumbbell fly</string>
    <string name="squats">Squats</string>
    <string name="warm_up">1. Warm up</string>
    <string name="seated_calf_raise">Seated calf raise</string>
    <string name="close_grip_bench_press">Close-grip bench press</string>
    <string name="french_bench_press">French bench press</string>


</resources>
