<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trainingsVeiws.FullBody_Training">

    <TextView
        android:id="@+id/textViewFitnessBuddyId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="676dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <TextView
            android:id="@+id/textViewDeafliftId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadlift"
            android:onClick="openDeadlift"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLatPulldownIdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLatPulldown"
            android:text="@string/lat_pulldown"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewBarbellRowId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openBarbellRow"
            android:text="@string/barbell_row"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewBicepCurlId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openBicepCurl"
            android:text="@string/bicep_curl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCrunchesId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCrunches"
            android:text="@string/crunches"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>