<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textViewOpinion2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#009688"
        android:capitalize="characters"
        android:gravity="center"
        android:text="@string/meal"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewOpinion3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textViewOpinion3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/training"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewOpinion2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textViewToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/today"
        android:textAllCaps="true"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTrainingDescriptionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/full_body"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewToday" />

    <Button
        android:id="@+id/buttonChangeTrainingId"
        android:layout_width="51dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="screen"
        android:text="@string/change"
        app:layout_constraintStart_toEndOf="@+id/textViewTrainingDescriptionId"
        app:layout_constraintTop_toBottomOf="@+id/textViewToday" />

    <ListView
        android:id="@+id/listViewTraining"
        android:layout_width="327dp"
        android:layout_height="184dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/training_full_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTrainingDescriptionId" />

    <Button
        android:id="@+id/buttonStartTrainingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Start training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewTraining" />

    <TextView
        android:id="@+id/textViewDoneTrainingsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Trainings done: "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTrainingId" />

    <Button
        android:id="@+id/buttonResetCountOfDoneTrainingsId"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoneTrainingsId" />

</androidx.constraintlayout.widget.ConstraintLayout>